--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-three/cannon": "^6.5.2",
+    "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.150.1",
+    "three-stdlib": "^2.21.8",
+    "three-to-cannon": "^4.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
